# AFG

./: Cargo.toml  README.md
datasets/: JsTs_input_functions.json  llm_api_functions.json  otherlang_input_functions.json  rust_input_functions.json
demo/: rust-toolchain.toml
examples/: demo_pts.sample.txt  mump_config.json
src/: main.rs
