[package]
name = "afg"
version = "0.1.0"
edition = "2021"
description = "MUMP overlap detector"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/apace-lab/AFG"
keywords = ["pointer-analysis", "taint-analysis", "mir", "rust", "security"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "afg"
path = "src/main.rs"
